--- a/package.json
+++ b/package.json
@@ -12,14 +12,10 @@
   "devDependencies": {
     "jest": "^29.7.0"
   },
-
-
-    "scripts": {
-      "test": "jest"
-    }
+  "scripts": {
+    "test": "jest"
+  },
+  "dependencies": {
+    "colors": "^1.4.0"
   }
-
-
-
-
-
+}
