--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "jest": "^29.7.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
     "colors": "^1.4.0"
