--- a/package.json
+++ b/package.json
@@ -8,5 +8,17 @@
     "createdAt": "2023-09-04T18:43:43.114Z",
     "version": "6.7.0",
     "commit": "1e61f863787ca573e7e7235dfba9b94c0a4efae3"
+  },
+  "devDependencies": {
+    "eslint": "^8.51.0",
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "jest --coverage"
+  },
+  "dependencies": {
+    "markdown-it": "^13.0.2",
+    "marked": "^9.1.2",
+    "node-fetch": "^3.3.2"
   }
 }
