--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "commit": "1e61f863787ca573e7e7235dfba9b94c0a4efae3"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.19.4",
     "jest": "^29.7.0"
   },
   "scripts": {
