--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "md-links",
   "version": "0.1.0",
-  "engines": {
-    "node": ">=16.x"
+  "description": "Libreria para analizar enlaces en archivos Markdown",
+  "author": "Knelia Rodríguez",
+  "license": "MIT",
+  "main": "src/index.js",
+  "bin": {
+    "md-links": "bin/md-links.js"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "keywords": ["markdown", "analizador", "links"],
   "bootcamp": {
     "createdAt": "2023-09-04T18:43:43.114Z",
     "version": "6.7.0",
@@ -11,9 +19,13 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.19.4",
+    "eslint": "^7.32.0",
     "jest": "^29.7.0"
   },
   "scripts": {
     "test": "jest --coverage"
+  },
+  "dependencies": {
+    "markdown-it": "^13.0.2"
   }
 }
