--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "keywords": ["markdown", "analizador", "links"],
+  "keywords": [
+    "markdown",
+    "analizador",
+    "links"
+  ],
   "bootcamp": {
     "createdAt": "2023-09-04T18:43:43.114Z",
     "version": "6.7.0",
@@ -26,6 +30,7 @@
     "test": "jest --coverage"
   },
   "dependencies": {
-    "markdown-it": "^13.0.2"
+    "markdown-it": "^13.0.2",
+    "marked": "^9.1.2"
   }
 }
