--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "commit": "1e61f863787ca573e7e7235dfba9b94c0a4efae3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "colors": "^1.4.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
