--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "scripts": {
     "test": "jest --coverage",
     "lint": "eslint ."
-
+  },
+  "dependencies": {
+    "axios": "^1.6.0"
   }
 }
