--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "chalk": "^5.3.0",
+    "kleur": "^4.1.5"
   },
   "bin": {
     "mdlinks2d": "./cli.js"
-  } 
+  }
 }
